--- a/index.html
+++ b/index.html
@@ -105,26 +105,26 @@
         <p>Voici quelques exemples de débouchés pour les diplômés d'ESINI:</p>
         <li>
             <p>
-            <h3>Le développeur informatique:</h3> ESINI forme les éléves a devenir developpeur informatique dans tous
+            <h3>Le développeur informatique:</h3> ESINI forme les éléves à devenir développeur informatique dans tous
             les domaines</p>
 
         </li>
         <li>
             <p>
-            <h3>Ingénieur en cybersécurité:</h3> lors du choix de vos matière il est possible de se specialisé dans la
+            <h3>Ingénieur en cybersécurité:</h3> lors du choix de vos matières il est possible de se specialiser dans la
             cybersecurité</p>
 
         </li>
         <li>
             <p>
-            <h3>Ingénieur en intelligence artificielle:</h3> a ESINI nous formons les élèves sur l'inteligence
+            <h3>Ingénieur en intelligence artificielle:</h3> à ESINI nous formons les élèves sur l'inteligence
             artificielle</p>
 
         </li>
         <li>
             <p>
             <h3>Ingénieur en bases de données:</h3> dans toutes les matieres nous utilisons les bases de données, il
-            estr donc possible de se specifier dans les bases de données</p>
+            est donc possible de se spécifier dans les bases de données</p>
 
         </li>
         <p>Les diplômés d'une école d'ingénieurs en informatique peuvent également poursuivre des carrières dans des
